--- a/src/sets.ui
+++ b/src/sets.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>设置</string>
   </property>
   <property name="windowIcon">
    <iconset resource="PopupClock.qrc">
