--- a/src/PopupClock.ui
+++ b/src/PopupClock.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>304</width>
-    <height>97</height>
+    <height>109</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -117,8 +117,6 @@ border-radius:18px;
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="PopupClock.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
