重构代码，托盘以及时钟界面可以正常运行
Signed-off-by: beiklive <1376896787@qq.com>

--- a/res/ImgSource.qrc
+++ b/res/ImgSource.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/PopupClock">
+    <qresource prefix="/">
         <file>DDJ.ico</file>
         <file>DDJ.png</file>
     </qresource>
